--- a/add.html
+++ b/add.html
@@ -59,6 +59,14 @@
                     <label>שעה</label>
                     <input type="time" class="form-control" id="time">
                   </div>
+
+                  <div class="form-group">
+                    <label>דיווח</label>
+                    <select class="form-control" id="report">
+                      <option value="כן"selected>כן</option>
+                      <option value="לא">לא</option>
+                      </select>
+                  </div>
                
                 <button type="submit" class="btn btn-default bg-primary text-light">Submit</button>
               </form>
