--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
                     <th>Date</th>
                     <th>Day</th>
                     <th>Time</th>
+                    <th>Report</th>
                 </tr>
             </table>
             <a href="#" id="clearTasksID" class="btn btn-primary">Clear All Tasks</a>
