--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
         </nav>
 
-        <div class="container">
+        <div class="container overflow-scroll">
             <h2 class="page-header">My Daily Tasks</h2>
             <table class="table table-striped" id="taskTableID">
                 <tr>
