--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
             <h2 class="page-header">My Daily Tasks</h2>
             <table class="table table-striped" id="taskTableID">
                 <tr>
-                    <th>Task</th>
-                    <th>Priority</th>
+                    <th>Name</th>
+                    <th>Type</th>
                     <th>Date</th>
                     <th>Day</th>
                     <th>Time</th>
