--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
             </li>
 
             <li class="nav-item">
-            <a class="nav-link mr-4" href="add.html">Add Entry</a>
+            <a class="nav-link mr-4" href="add.html">Add Task</a>
             </li>
 
         </ul>
         </nav>
 
         <div class="container overflow-auto">
-            <h2 class="page-header">My Daily Tasks</h2>
+            <h2 class="page-header text-center m-4">My Tasks</h2>
             <table class="table table-striped" id="taskTableID">
                 <tr>
                     <th>Name</th>
