--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </nav>
 
         <div class="container overflow-auto">
-            <h2 class="page-header text-center m-4">Babu Tasks ❤️</h2>
+            <h2 class="page-header text-center my-2">Babu Tasks ❤️</h2>
             <table class="table table-striped" id="taskTableID">
                 <tr>
                     <th>Name</th>
